--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mainsail",
-    "version": "2.7.3",
+    "version": "2.8.1",
     "private": true,
     "decription": "a klipper web interface",
     "author": {
@@ -40,6 +40,7 @@
         "axios": "^0.27.0",
         "codemirror": "^6.0.1",
         "core-js": "^3.16.0",
+        "detect-browser": "^5.3.0",
         "echarts": "^5.2.2",
         "echarts-gl": "^2.0.8",
         "hls.js": "^1.3.3",
@@ -55,6 +56,7 @@
         "typed_janus_js": "^1.0.14",
         "uuid": "^9.0.0",
         "vue": "^2.7.10",
+        "vue-browser-detect-plugin": "^0.1.18",
         "vue-class-component": "^7.2.6",
         "vue-echarts": "^6.0.2",
         "vue-i18n": "^8.25.0",
@@ -77,16 +79,16 @@
         "@types/lodash.throttle": "^4.1.6",
         "@types/semver": "^7.3.8",
         "@types/uuid": "^8.3.1",
-        "@typescript-eslint/eslint-plugin": "^5.11.0",
-        "@typescript-eslint/parser": "^5.11.0",
-        "@vue/eslint-config-typescript": "^11.0.0",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
+        "@vue/eslint-config-typescript": "^12.0.0",
         "autoprefixer": "^10.4.2",
-        "cypress": "^10.0.0",
+        "cypress": "^13.2.0",
         "eslint": "^8.9.0",
-        "eslint-config-prettier": "^8.3.0",
+        "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-jsonc": "^2.2.1",
         "eslint-plugin-vue": "^9.0.0",
-        "prettier": "^2.5.1",
+        "prettier": "^3.0.0",
         "sass": "~1.32",
         "start-server-and-test": "^1.14.0",
         "typescript": "^4.5.5",
@@ -118,6 +120,6 @@
         "last 2 edge major versions"
     ],
     "engines": {
-        "node": "^16 || ^18"
+        "node": "^18 || ^20"
     }
 }
